--- a/io.github.Dretch.MonomerFlatpakExample.yml
+++ b/io.github.Dretch.MonomerFlatpakExample.yml
@@ -78,7 +78,20 @@ modules:
   - find . -name '*.tar.gz' | while read pkg; do bash revise.sh "$pkg"; done
   - mkdir .cabal
   - touch .cabal/config
-  - cabal --config-file=.cabal/config install -j1 --offline --prefix=/app *.tar.gz
+  - |
+    # workaround https://github.com/haskell/cabal/issues/8923 by making pkg-config fail
+    # when given more than one package, instead of silently using only the first package 
+    mkdir -p pkg-config-hack
+    cat <<'EOF2' > pkg-config-hack/pkg-config
+    #!/bin/bash
+    if [ "$1" == "--modversion" ] && [ "$2" != "" ] && [ "$3" != "" ]; then
+      exit 1
+    fi
+    exec /usr/bin/pkg-config $@
+    EOF2
+    chmod +x pkg-config-hack/pkg-config
+    export PATH=$(pwd)/pkg-config-hack:$PATH
+    cabal --config-file=.cabal/config install -j1 --offline --prefix=/app *.tar.gz
   sources:
   - commands:
     - tarball="$1"
